app/src/main/resources/io/xpipe/app/resources/style/browser.css
.root:macos .browser .browser-content, .root:macos .browser .top-bar {
    -fx-font-family: "Inter";
}

.browser .visual-display {
    -fx-border-color: -color-border-default;
    -fx-border-width: 2 1 1 1;
}

.browser .visual-display:focused {
    -fx-border-color: -color-accent-emphasis;
}

.download-background {
    -fx-padding: 1em;
}

.transfer {
    -fx-padding: 0 6 4 4;
}

.transfer > .download-background.color-box.gray {
    -fx-border-radius: 4;
    -fx-background-radius: 4;
}

.transfer:highlighted > .download-background.color-box.gray {
    -fx-border-color: -color-accent-emphasis;
    -fx-background-color: derive(-color-bg-subtle, 5%);
}

.transfer .button {
    -fx-border-color: -color-border-default;
    -fx-border-width: 1px;
    -fx-background-color: -color-bg-default-transparent;
    -fx-background-radius: 4;
    -fx-border-radius: 4;
    -fx-padding: 0.1em 0.2em;
}

.root:nord .transfer > * {
    -fx-background-radius: 0;
    -fx-border-radius: 0;
}

.transfer .button:hover {
    -fx-background-color: -color-accent-subtle;
    -fx-opacity: 1.0;
}

.browser .top-spacer {
    -fx-background-color: transparent;
    -fx-border-width: 0 0 1 0;
    -fx-border-color: -color-border-default;
}

.root:seamless-frame .browser .top-spacer {
    -fx-background-radius: 0 6 0 0;
}

.browser .welcome .button:hover {
    -fx-background-color: -color-neutral-muted;
}

.browser .tile > * {
    -fx-padding: 0.6em 0 0.6em 0;
}

.browser .browser-content.overview {
    -fx-spacing: 1.5em;
    -fx-padding: 1.5em;
    -fx-background-color: -color-bg-default-transparent;
}

.browser .browser-overview{
    -fx-spacing: 7;
}

.browser .terminal-dock-comp {
    -fx-padding: 7 7 7 3;
}

.browser .terminal-dock-comp:empty {
    -fx-border-insets: 6;
    -fx-border-width: 1;
    -fx-border-color: -color-border-default;
    -fx-border-radius: 4;
    -fx-background-color: -color-bg-default-transparent;
    -fx-background-insets: 6;
    -fx-background-radius: 4;
}

.root:nord .browser .terminal-dock-comp:empty {
    -fx-border-radius: 0;
    -fx-background-radius: 0;
}

.selected-file-list {
    -fx-spacing: 5px;
    -fx-padding: 8px;
}

.selected-file-list * {
    -fx-spacing: 5px;
}

.selected-file-list.drag {
    -fx-border-width: 1px;
    -fx-border-color: -color-border-default;
    -fx-background-color: -color-neutral-muted;
    -fx-background-radius: 1px;
    -fx-border-radius: 1px;
}

.transfer:drag-over > .download-background.color-box.gray {
    -fx-background-color: -color-success-muted;
}

.browser .top-bar {
    -fx-min-height: 2.8em;
    -fx-pref-height: 2.8em;
    -fx-max-height: 2.8em;
    -fx-padding: 6 4 6px 0;
}

.browser .top-bar > .button-bar {
    -fx-border-color: -color-border-default;
    -fx-border-width: 1px;
    -fx-background-color: -color-bg-default-transparent;
    -fx-background-radius: 4;
    -fx-border-radius: 4;
}

.root:nord .browser .top-bar > .button-bar {
    -fx-background-radius: 0;
    -fx-border-radius: 0;
}

.browser .top-bar > .button-bar > .button {
    -fx-background-insets: 0;
    -fx-background-color: transparent;
}

.browser .top-bar > .button-bar > .menu-button {
    -fx-padding: 0;
    -fx-background-insets: 0;
    -fx-background-color: transparent;
}

.browser .top-bar > .button-bar > .button:hover, .root:key-navigation .browser .top-bar > .button-bar > .button:focused {
    -fx-background-color: -color-neutral-muted;
}

.browser .top-bar > .button-bar > .menu-button:hover, .root:key-navigation .browser .top-bar > .button-bar > .menu-button:focused {
    -fx-background-color: -color-neutral-muted;
}

.browser .top-bar > .button-bar > .browser-filter .button:hover {
    -fx-background-color: -color-neutral-muted;
}

.browser .status-bar {
    -fx-background-radius: 0 0 4 4;
    -fx-border-width: 1 0 0 0;
    -fx-border-color: -color-border-default;
    -fx-padding: 5 8;
}

.browser .status-bar .progress {
    -fx-font-family: Roboto;
}

.browser .breadcrumbs > .divider {
    -fx-padding: 0;
}

.browser .breadcrumbs {
    -fx-padding: 0px 10px 0px 10px;
}

.browser .breadcrumbs {
    -fx-background-color: transparent;
}

.browser .breadcrumbs .button {
    -fx-padding: 3px 1px 3px 1px;
    -fx-background-color: transparent;
}

.browser .breadcrumbs .button:hover {
    -fx-background-color: -color-neutral-muted;
}

.browser .path-text {
    -fx-padding: 3 12;
}

.browser .browser-filter .text-field {
    -fx-padding: 3 12;
    -fx-background-radius: 4 0 0 4;
    -fx-background-insets: 0;
}

.root:nord .browser .browser-filter .text-field {
    -fx-background-radius: 0;
}

.browser .path-text:invisible {
    -fx-text-fill: transparent;
}

.browser .overview .simple-titled-pane-comp {
    -fx-background-radius: 4;
}

.root:nord .browser .overview .simple-titled-pane-comp {
    -fx-background-radius: 0;
}

.browser .overview-file-list {
    -fx-border-width: 0;
}

.browser .overview .simple-titled-pane-comp > .content {
    -fx-padding: 0 2 4 4;
}

.browser .overview-file-list .button {
    -fx-border-width: 0;
    -fx-background-radius: 0;
    -fx-background-insets: 0;
    -fx-effect: none;
}

.browser .tab-pane {
    -fx-border-width: 0 0 0 0px;
    -fx-border-color: -color-border-default;
}

.browser.chooser {
    -fx-padding: -11 -3 -10 -3;
}

.chooser-selection {
    -fx-background-color: -color-bg-subtle;
    -fx-background-radius: 2;
}

.browser .singular {
    -fx-tab-max-height: 0;
}

.browser .singular .tab-header-area {
    visibility: hidden;
}

.browser .tab-header-area, .browser .headers-region {

}

.browser .tab-header-area .control-buttons-tab {
    -fx-opacity: 0;
}

.browser .tab-loading-indicator {
    -fx-min-width: 2.5em;
    -fx-pref-width: 2.5em;
    -fx-max-width: 2.5em;
    -fx-min-height: 2.5em;
    -fx-pref-height: 2.5em;
    -fx-max-height: 2.5em;
}

.browser.chooser .left {
    -fx-border-width: 0;
}

.browser .tab-header-area {
    -fx-background-color:  transparent;
}

.root:seamless-frame .browser .tab-header-area {
    -fx-background-radius: 0 6 0 0;
}

.browser .browser-content {
    -fx-padding: 6 0 0 0;
    -fx-border-radius: 4;
    -fx-background-radius: 4;
    -fx-background-insets: 0, 7 0 0 0;
}

.browser .browser-content-container {
    -fx-padding: 0 4 4 0;
}

.root:nord .browser .browser-content {
    -fx-border-radius: 0;
    -fx-background-radius: 0;
}

.browser .table-view {
    -fx-border-width: 0 0 0 0px;
    -fx-border-color: -color-border-default;
}

.browser .split-pane-divider {
    -fx-padding: 0 2 0 3;
    -fx-opacity: 1.0;
    -fx-background-color: transparent;
}

.browser.chooser .split-pane-divider {
    -fx-border-width: 0;
}

.table-view .column-header {
    -fx-pref-height: 2em;
    -fx-background-color: transparent;
}

.table-view .column-header-background {
    -fx-background-color: transparent;
}

.table-view .column-header-background .label {
    -fx-font-weight: bolder;
    -fx-opacity: 0.9;
    -fx-padding: 0 0 0 7;
}

.browser .table-row-cell:empty {
    -fx-opacity: 0.7;
}

/* setting opacity directly to the .table-cell or .table-row-cell
   leads to incorrect table row height calculation #javafx-bug */
/*.browser .table-row-cell:hidden > .table-cell > * {*/
/*    -fx-opacity: 0.75;*/
/*}*/

.browser .table-view:drag-into-current .table-row-cell {
    -fx-opacity: 0.65;
}

.browser .table-row-cell:file:hover, .table-row-cell:folder:hover {
    -fx-background-color: -color-accent-subtle;
}

.browser .table-row-cell:selected, .browser .table-row-cell:hover:selected, .root:key-navigation .browser .table-view:focus-within .table-row-cell:focused:selected {
    -fx-background-color: -color-success-subtle;
}

.root:key-navigation .browser .browser-content:focus-within .table-view:focus-within .table-row-cell:focus-visible {
    -fx-background-color: -color-warning-subtle;
}

.root:dark:nord .browser .table-row-cell:selected, .root:dark:nord .browser .table-row-cell:hover:selected {
    -fx-background-color: -color-success-7;
}

.root:light:nord .browser .table-row-cell:selected, .root:light:nord .browser .table-row-cell:hover:selected {
    -fx-background-color: -color-success-1;
}

.browser .table-row-cell:drag-over {
    -fx-background-color: -color-success-muted;
}

.browser .table-row-cell:drag {
    -fx-background-color: -color-accent-muted;
}

.browser .tab-container {
    -fx-border-radius: 4;
    -fx-background-radius: 4;
}

.browser .tab {
    -fx-opacity: 0.6;
}

.browser .tab:hover {
    -fx-opacity: 0.8;
}

.browser .tab:selected {
    -fx-opacity: 1.0;
}

.root:nord .browser .tab-container {
    -fx-border-radius: 0;
    -fx-background-radius: 0;
}

.browser .quick-access-button {
    -fx-border-radius: 0;
    -fx-background-radius: 0;
}

.browser .quick-access-button .context-menu .leaf > * > .arrow {
    -fx-pref-width: 0;
    -fx-opacity: 0;
}

